--- a/src/components/MainForm.css
+++ b/src/components/MainForm.css
@@ -80,6 +80,7 @@ padding-bottom: 7%;
     margin-top: 2%;
     margin-bottom: 2%;
     font-weight: bold;
+    text-align: center;
 }
 /* #logo{
     height: 20%;
@@ -113,15 +114,21 @@ padding-bottom: 7%;
     }
    
     #logo {
-        height: 36%;
+        height: 60%;
     }
     #tech {
-        height: 15%;
+        height: 25%;
     }
     #component-helper-text {
         color: red;
         margin-left: 1.5%;
         margin-top: -9.5%;
+    }
+    #leftside {
+        height: 10%;
+    }
+    .memberdiv {
+        padding-left: 4.7%;
     }
    
 }
@@ -142,4 +149,14 @@ padding-bottom: 7%;
         color: red;
         margin-left: 1%;
     }
+    .memberdiv {
+        padding-left: 2.5%;
+    }
+}
+
+.memberdiv {
+    border-radius: 11px;
+    justify-content: center;
+    margin-bottom: 7%;
+    box-shadow: 0 10px 10px hsl(0deg 0% 59% / 80%);
 }
