--- a/src/components/MainForm.css
+++ b/src/components/MainForm.css
@@ -1,103 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@500&family=Inter:wght@400;600;700&family=Kumbh+Sans:wght@700&family=Lato&family=Montserrat&family=Noto+Sans:wght@700&family=Nunito:wght@700&family=Outfit:wght@700&family=PT+Sans&family=Padauk:wght@700&family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@300;400&display=swap');
+
 * {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    box-sizing: border-box;
 }
 #scroll{
 /* position: absolute;
-    left:45%;
+    left:30%;
     top:20%;
-    right: 20%; */
-    display: flex;
-    justify-content: space-around;
-    /* border: 1px solid rebeccapurple; */
-    /* width: fit-content;
-    margin: auto; */
+    right: 20%;
+     */
+     /* border: 1px solid red; */
+     display: flex;
+     justify-content: center;
+     font-family: 'Alegreya Sans', sans-serif;
 }
-.progressBar {
-    /* padding: 5rem; */
-    margin-top: 1rem;
-    color: #0A6498;
-}
-.item-time {
-    display: flex;
-    align-items: center;
-    /* border: 1px solid red; */
-    padding: 2rem;
-}
-#para-time {
-    /* border: 1px solid red; */
-    position: relative;
-    left: 1rem;
-}
-.progressBar h2 {
-    position: relative;
-    top: 1.4rem;
-}
-#pro {
-    /* border: 1px solid red; */
-    /* width: fit-content; */
-    margin-top: 4rem;
-    height: 30rem;
-}
-.para {
-    position: relative;
-    right: 1.8rem;
-    /* border: 1px solid red; */
-}
-#time1 {
-    position: relative;
-    left: 0.5rem;
-}
-#time2 {
-    position: relative;
-    right: 0.8rem;
-}
-#active {
-    background-color: #1788cc;
-    position: relative;
-    left: 0.4rem;
-}
-.time {
-    border: 1px solid #0A6498;
-    width: fit-content;
-    margin: auto;
-    width: 3rem;
-    height: 3rem;
-    padding: 1rem;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-    color: black;
-    font-weight: 700;
-}
-.timeP {
-    position: relative;
-    top: 1rem;
-}
-#leftside
-{
-    height: 15%;
-    background-color: #1788cc;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100vw;
-    overflow-wrap: normal;
-
-}
-.box {
-    /* border: 1px solid red; */
+h1 {
+    color: rgb(70, 70, 255);
+    /* color: #224581; */
 }
 #tsize {
     /* border: 1px solid red; */
     display: flex;
-    
+    /* flex-direction: column; */
 }
-.select-team {
+#technival img {
     /* border: 1px solid red; */
-    margin-right: 1rem;
+    height: 8rem;
+    position: relative;
+    right: 5rem;
+    top: 0.5rem;
+    filter: invert(100%);
+}
+#leftside
+{
+    height: 15%;
+    /* background-color: #1788cc; */
+    background-color: #224581;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100vw;
+    overflow-wrap: normal;
+    width: 100%;
 }
 #xyz
 { height: 100vh;
@@ -115,6 +60,7 @@
     font-size:170%;
     font-family: Roboto, Helvetica, sans-serif;
     
+    
 }
 .head1
 {
@@ -122,7 +68,8 @@
     font-weight: bold;
     font-size:200%;
     font-family: Roboto, Helvetica, sans-serif;
-
+    
+    
 }
 h3{
     font-family: Roboto, Helvetica, sans-serif;
@@ -163,6 +110,7 @@ padding-bottom: 7%;
     margin-top: 2%;
     margin-bottom: 2%;
     font-weight: bold;
+    text-align: center;
 }
 /* #logo{
     height: 20%;
@@ -196,10 +144,21 @@ padding-bottom: 7%;
     }
    
     #logo {
-        height: 36%;
+        height: 60%;
     }
     #tech {
-        height: 15%;
+        height: 25%;
+    }
+    #component-helper-text {
+        color: red;
+        margin-left: 1.5%;
+        margin-top: -9.5%;
+    }
+    #leftside {
+        height: 10%;
+    }
+    .memberdiv {
+        padding-left: 4.7%;
     }
    
 }
@@ -215,9 +174,32 @@ padding-bottom: 7%;
     #tech {
         height: 23%;
     }
+    #component-helper-text {
+        margin-top: -4%;
+        color: red;
+        margin-left: 1%;
+    }
+    .memberdiv {
+        padding-left: 2.5%;
+    }
 }
-@media(max-width: 900px) {
-    .progressBar {
-        display: none;
+
+.memberdiv {
+    border-radius: 11px;
+    justify-content: center;
+    margin-bottom: 7%;
+    box-shadow: 0 10px 10px hsl(0deg 0% 59% / 80%);
+}
+@media(max-width: 550px) {
+    #tsize {
+        flex-direction: column;
+    }
+    #technival img {
+        /* border: 1px solid red; */
+        height: 5rem;
+        position: relative;
+        right: 3rem;
+        top: 0.5rem;
+        filter: invert(100%);
     }
 }
